--- a/figmareact/src/components/Login/LoginPage.module.css
+++ b/figmareact/src/components/Login/LoginPage.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     padding: 200px 250px;
+    transform: scale(1.2);
   }
   
   @media (max-width: 991px) {
@@ -16,7 +17,7 @@
   .loginContainer {
     border-radius: 16px;
     background-color: #fff;
-    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); 
     width: 950px;
     max-width: 100%;
     display: flex;
@@ -53,7 +54,7 @@
     object-fit: contain;
     object-position: center;
     background-color: #fff;
-    width: 220px;
+    width: 232px;
     border-radius: 16px 0 0 0;
   }
   
@@ -106,9 +107,9 @@
   }
   
   .input {
-    color: #a9a9a9;
+    color: #000000;
     flex-grow: 1;
-    font: 800 10px Inter, sans-serif;
+    font: 1100 10px Inter, sans-serif;
     border: none;
     background: transparent;
     outline: none;
@@ -140,7 +141,7 @@
   }
 
   .errorMessage {
-    color: #d9534f; /* Cor vermelha para a mensagem de erro */
+    color: #000000; /* Cor vermelha para a mensagem de erro */
     font-size: 14px; /* Tamanho da fonte */
     margin-top: 10px; /* Espaçamento acima da mensagem */
     text-align: center; /* Centraliza a mensagem */
