--- a/figmareact/src/components/MenuAssistente/MenuAssistente.module.css
+++ b/figmareact/src/components/MenuAssistente/MenuAssistente.module.css
@@ -6,12 +6,11 @@
     max-width: 958px; /* Define a largura máxima do container */
     padding: 1px 0; /* Adiciona um padding opcional */
     margin: 0 auto; /* Opcional: centraliza o container horizontalmente se ele tiver uma largura fixa */
+    transform: scale(1.2);
 }
 
 /* Seu CSS */
-.my-custom-class {
-  color: #ff0000 !important; /* Garantir que seu estilo seja aplicado */
-}
+
 
 
   
@@ -84,6 +83,7 @@
     width: 304px;
     border-radius: 16px 0 0 0;
     z-index: 10;
+    background-color: #fff;
   }
   
   .sidebarTitle {
