beneficio e requisicao faltante design

--- a/figmareact/src/components/Beneficio/BeneficiosAssistente.module.css
+++ b/figmareact/src/components/Beneficio/BeneficiosAssistente.module.css
@@ -167,8 +167,8 @@
   justify-content: flex-start;
   padding: 50px;
   padding-left: 1%;
-  margin-top: 150px;
-  width: 90%;
+  margin-top: 50px;
+  width: 140%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -178,7 +178,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  padding-left: 200%;
+  padding-left: 68%;
 }
 
 .searchInput {
@@ -197,19 +197,17 @@
 }
 
 .createButton {
-  width: 200px;
+  width: auto;
   padding: 8.5px;
-  
+  margin-bottom: 24px;
   border-radius: 4px;
   border: 1px solid #ddd;
   font-size: 16px;
-  
-  background-color: #ffffff;
-  color:#000000
+  background-color: #4A8920;
 }
 
 .historicoTable {
-  width: 40%;
+  width: 20%;
   border-collapse: collapse;
   background-color: #fff;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -283,4 +281,19 @@
   font-size: 14px;
 }
 
+.editButton {
+  background-color: #007bff;
+  margin-right: 8px;
+}
 
+.editButton:hover {
+  background-color: #0056b3;
+}
+
+.deleteButton {
+  background-color: #dc3545;
+}
+
+.deleteButton:hover {
+  background-color: #c82333;
+}
