--- a/figmareact/src/components/Beneficiado/GerenciarBeneficiado.module.css
+++ b/figmareact/src/components/Beneficiado/GerenciarBeneficiado.module.css
@@ -60,7 +60,7 @@
   flex-direction: column;
   color: #fff;
   text-align: center;
-  width: 55%;
+  width: 95%;
   font: 800 20px Inter, sans-serif;
 }
 
@@ -84,7 +84,7 @@
 .sidebarTitle {
   align-self: center;
   position: relative;
-  top: 160px;
+  top: 250px;
   margin-left: 10px;
   text-align: center;
   padding: 0;
@@ -97,14 +97,12 @@
 }
 
 .formTitle {
-  align-self: center;
   position: relative;
-  left: 260%;
-  bottom: 60%;
-  margin-left: -250px;
+  top: -200px;
+  left: 220%;
+  
   color: #4f9122;
   text-align: center;
-  padding: 0;
   font: 600 40px Inter, sans-serif;
 }
 
@@ -178,7 +176,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  padding-left: 68%;
+  padding-left: 47%;
 }
 
 .searchInput {
@@ -207,16 +205,18 @@
 }
 
 .historicoTable {
-  width: 20%;
+  width: 50%;
   border-collapse: collapse;
   background-color: #fff;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  margin-right: 165px;
+
 }
 
 .historicoTableContainer {
   max-height: 500px;
-  width: 150%;
+  width: 100%;
 }
 
 .historicoTable th, .historicoTable td {
@@ -224,9 +224,10 @@
   padding: 12px;
   text-align: left;
   white-space: nowrap;
-  max-width: 170px;
+  max-width: 150px;
   overflow: hidden;
   text-overflow: ellipsis;
+  left: 100px;
 }
 
 .historicoTable th {
