--- a/figmareact/src/components/HistoricoConsultaAgendamento/ConsultarHistoricoAgen.module.css
+++ b/figmareact/src/components/HistoricoConsultaAgendamento/ConsultarHistoricoAgen.module.css
@@ -167,8 +167,8 @@
   justify-content: flex-start;
   padding: 50px;
   padding-left: 1%;
-  margin-top: 50px;
-  width: 140%;
+  margin-top: 80px;
+  width: 110%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -179,6 +179,9 @@
   align-items: center;
   gap: 10px;
   padding-left: 68%;
+  left: 120px;
+  position: relative;
+
 }
 
 .searchInput {
